# codex-transcripts

./: .gitignore  AGENTS.md  README.md  pyproject.toml
codex-export/: index.html  session_meta.json
references/: index.md  links.md  notes.md
src/codex_transcripts/: __init__.py  cli.py  gist.py  remote.py  render.py  rollout.py  transcript.py  tui.py
src/codex_transcripts/templates/: archive_index.html  base.html  chat.html  index.html  macros.html  theme_toggle.html  viewer.js
tests/: conftest.py  sample_rollout.jsonl  sample_rollout_known_event_types.jsonl  sample_rollout_unknown.jsonl  sample_rollout_unknown_event.jsonl  sample_rollout_unknown_response_item.jsonl  test_full_cycle_integration.py  test_generate_html.py  test_gist.py  test_global_session_discovery.py  test_remote_import.py  test_resume_style.py  test_rollout_parser.py  test_tui_model.py
